Updates - bug fixes and setting configurations

--- a/smtp/src/views/email.hbs
+++ b/smtp/src/views/email.hbs
@@ -8,17 +8,16 @@
       rel="stylesheet"
       href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css"
     />
-    <title>Authentication | {{title}}</title>
+    <title>{{title}}</title>
   </head>
 
   <body>
     <main class="container">
       <h1>Hi {{username}}!</h1>
       <p>
-        Thank you for signing up. Click on the button below to verify your
-        account.
+        This is an email sent from the cli.
       </p>
-      <a href={{url}} role="button">Verify</a>
+      {{!-- <a href={{url}} role="button">Verify</a> --}}
     </main>
   </body>
 
